# MOCHAPlus

./: CMakeLists.txt  CalculateContactForceTorque.cu  CalculateContactForceTorque.cuh  CalculateForceTorque.cu  DEMSolver.cpp  DEMSolver.h  DeviceStructs.h  ExternalForceTorque.cu  ExternalForceTorque.cuh  HostDataValidator.cpp  HostDataValidator.h  HostStructs.h  Integrate.cu  Integrate.cuh  MOCHA.sln  MOCHA.vcxproj  NeighborSearch.cu  NeighborSearch.cuh  ProblemTemplate.cpp  Solver.cpp  Solver.h  cuda_mem_utils.h  input.cpp  input.h  mySymMatrix.h  output.cpp  output.h
Driver/: Problem.cpp
MOCHASource/: CMakeLists.txt
MOCHASource/Driver/: Problem.cpp
MOCHASource/HostDeviceData/: HostStructs.h
MOCHASource/Kernel/: CalculateContactForceTorque.cuh  CalculateForceTorque.cuh  DEMSolver.h  ExternalForceTorque.cu  ExternalForceTorque.cuh  Integrate.cu  Integrate.cuh
MOCHASource/Tool/: HostDataValidator.cpp  myQuaternion.h  mySymMatrix.h  myVector.h
outputData/: boundaryWalls.vtu  triangles_0000.vtu
